<resources>
    <string name="app_name">SmartHome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="smarthome">SmartHome</string>
    <string name="email">Email        </string>
    <string name="password">Password</string>
    <string name="stay_signed_in">Stay signed in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="full_name">Full name</string>
    <string name="email_register">Email         </string>
    <string name="forgot_disclaimer">Enter the email associated with your account and we will send an email with instructions to reset your password.</string>
    <string name="send_code">Send code</string>
    <string name="create_new_password">Create new password</string>
    <string name="create_new_password_disclaimer">Your new password must be different from previous used passwords.</string>
    <string name="security_code">Security code</string>
    <string name="reset_password">Reset password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome">Welcome, SmekHod!</string>
    <string name="menu_search">Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_presets">Presets</string>
    <string name="date">Date</string>
    <string name="presets">Presets</string>
    <string name="settings">Settings</string>
    <string name="time_zone">Time zone</string>
    <string name="save_changes">Save changes</string>
    <string name="phone_number">Phone number</string>
    <string name="notifications_allow">Do you want to allow notifications?</string>
    <string name="save_room">Save room</string>
    <string name="create_new_room">Create new room</string>
    <string name="room_name">Room name</string>
    <string name="type">Type         </string>
    <string name="name">Name</string>
    <string name="pick_days">Pick days</string>
    <string name="create_new_preset">Create new preset</string>
    <string name="pick_time">Pick time</string>
    <string name="save_preset">Save preset</string>
    <string name="actions">Actions</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="device_number">   4 devices</string>
    <string name="add_new_room">Add new room</string>
    <string name="preset_name">Preset name</string>
    <string name="preset_time">10:00 Weekdays</string>
    <string name="room_name_devices">Room name</string>
    <string name="temperature">22 C°</string>
    <string name="add_new_device">Add new device</string>
    <string name="available_devices">Available devices</string>
    <string name="save_device">Save device</string>
    <string name="scan_for_device">Scan for device</string>
    <string name="led_strip">Led Strip</string>
    <string name="air_conditioner">Air conditioner</string>
    <string name="led_light_settings">Led light settings</string>
    <string name="climate_settings">Climate settings</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="new_name">New Name</string>
    <string name="change_name">Change name</string>
    <string name="log_out">Log out</string>
    <string name="click_here_to_change_password">Click here to change password!</string>
    <string name="homes">Homes</string>
    <string name="notifications">Notifications</string>
    <string name="join_home">Join home</string>
    <string name="create_home">Create home</string>
    <string name="create_new_home">Create new home</string>
    <string name="home_name">Home name</string>
    <string name="save_home">Save home</string>
    <string name="join_existing_home">Join existing home</string>
    <string name="current_home">Current home: You dont have a home yet!</string>
    <string name="create_home_disclaimer">If you create a new home you will be removed from your previous home!</string>
    <string name="join_home_disclaimer">If you join an existing home you will be removed from your previous home!</string>
    <string name="input">Input</string>
    <string name="rename_home">Rename home</string>
    <string name="rename_home_disclaimer">If you rename your home, it will be renamed for every user</string>
    <string name="delete_question">Are you sure you want to delete this item ?</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete item</string>
    <string name="home">Home</string>
    <string name="state_on">Turn On</string>

</resources>