<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/monday"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/mo"
        android:textOn="@string/mo"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/tuesday"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/tu"
        android:textOn="@string/tu"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/wednesday"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/we"
        android:textOn="@string/we"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/thursday"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/th"
        android:textOn="@string/th"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/friday"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/fr"
        android:textOn="@string/fr"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/saturday"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/sa"
        android:textOn="@string/sa"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />
    <ToggleButton
        android:id="@+id/sunday"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:textOff="@string/su"
        android:textOn="@string/su"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />
</LinearLayout>