<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentificationPage.fragment.ForgotPasswordFragment">


    <ImageView
        android:id="@+id/arrowImage"
        android:layout_width="95dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dosis_bold"
        android:text="@string/forgot_password"
        android:textSize="40sp"
        android:textColor="#000000"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowImage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="166dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuidelineLoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="87dp" />

    <TextView
        android:id="@+id/forgotDisclaimerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="16dp"
        android:text="@string/forgot_disclaimer"
        android:fontFamily="@font/dosis_semibold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />

    <TextView
        android:id="@+id/securityCodeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dosis_regular"
        android:text="@string/email"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineLoginPage"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotDisclaimerTV" />

    <EditText
        android:id="@+id/emailForgotInput"
        android:inputType="textEmailAddress"
        android:ems="16"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/custom_input_field"
        android:fontFamily="@font/dosis_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/securityCodeTV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSendCode"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/send_code"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:fontFamily="@font/dosis_medium"
        android:background="@drawable/custom_register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailForgotInput" />

</androidx.constraintlayout.widget.ConstraintLayout>